--- a/css/style.css
+++ b/css/style.css
@@ -9,8 +9,9 @@
   background-color: #fdf2e9;
   height: 9.6rem;
   padding: 0 4.8rem;
+  position: relative;
 }
-.logo {
+.logo-food {
   height: 2.2rem;
 }
 
@@ -23,7 +24,8 @@
   align-items: center;
   gap: 3.2rem;
 }
-.main-nav-link {
+.main-nav-link:link,
+.main-nav-link:visited {
   display: inline-block;
   text-decoration: none;
   color: #333;
@@ -31,7 +33,8 @@
   font-size: 1.8rem;
   transition: all 0.3s;
 }
-.main-nav-link:hover {
+.main-nav-link:hover,
+.main-nav-link:active {
   color: #cf711f;
 }
 .main-nav-link.nav-cta {
@@ -40,8 +43,35 @@
   color: #fff;
   background-color: #e67e22;
 }
-.main-nav-link.nav-cta:hover {
+.main-nav-link.nav-cta:link,
+.main-nav-link.nav-cta:visited {
+  padding: 1.2rem 2.4rem;
+  border-radius: 9px;
+  color: #fff;
+  background-color: #e67e22;
+}
+
+.main-nav-link.nav-cta:hover,
+.main-nav-link.nav-cta:active {
   background-color: #cf711f;
+}
+/* MOBILE */
+.btn-mobile-nav {
+  border: none;
+  background: none;
+  cursor: pointer;
+
+  display: none;
+}
+
+.icon-mobile-nav {
+  height: 4.8rem;
+  width: 4.8rem;
+  color: #333;
+}
+
+.icon-mobile-nav[name="close-outline"] {
+  display: none;
 }
 /* *************** */
 /* HERO SECTION */
@@ -81,15 +111,15 @@
   border-radius: 50%;
   margin-right: -1.6rem;
   border: 3px solid #fff;
-  transform: scale(1);
-  transition: 0.3s ease-in-out;
+  /* transform: scale(1); */
+  /* transition: 0.3s ease-in-out; */
 }
 .delivered-imgs img:last-child {
-  margin-right: 0;
+  margin: 0;
 }
-.delivered-imgs img:hover {
+/* .delivered-imgs img:hover {
   transform: scale(1.2);
-}
+} */
 .delivered-text {
   font-size: 1.8rem;
   font-weight: 500;
@@ -115,12 +145,12 @@
   text-align: center;
   margin-bottom: 2.4rem;
 }
-.logo {
+.logos {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-.logo img {
+.logos img {
   height: 3.2rem;
   cursor: pointer;
   filter: brightness(0);
@@ -429,10 +459,6 @@
 /**************************/
 
 .section-cta {
-  /* top / right / bottom / left */
-  /* padding: 9.6rem 0 12.8rem 0; */
-
-  /* top / horizontal / left */
   padding: 4.8rem 0 12.8rem;
 }
 
