coding sticky nav

--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,21 @@
 .icon-mobile-nav[name="close-outline"] {
   display: none;
 }
+.header.sticky {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 8rem;
+  padding-top: 0;
+  padding-bottom: 0;
+  background-color: rgb(255, 255, 255, 0.97);
+  box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.06);
+  z-index: 99;
+}
+.section-hero {
+  margin-top: 8.2rem;
+}
 /* *************** */
 /* HERO SECTION */
 /* *************** */
